dart and js update

--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -12,6 +12,15 @@ RUN apt install curl vim build-essential -y
 # for jdk
 RUN apt-get install openjdk-8-jdk -y
 
+# for dart
+RUN apt-get install wget
+RUN apt-get install apt-transport-https
+RUN wget -qO- https://dl-ssl.google.com/linux/linux_signing_key.pub | gpg --dearmor -o /usr/share/keyrings/dart.gpg
+RUN echo 'deb [signed-by=/usr/share/keyrings/dart.gpg arch=amd64] https://storage.googleapis.com/download.dartlang.org/linux/debian stable main' | tee /etc/apt/sources.list.d/dart_stable.list
+RUN apt-get update
+RUN apt-get install dart
+
+
 RUN curl -sL https://deb.nodesource.com/setup_14.x | bash 
 RUN apt-get install nodejs -y
 # RUN apt install npm -y
